@@ -10,6 +10,7 @@ pts-core: Allow showing test description within the result viewer
 pts-core: Fixes for running the result viewer from a website sub directory in correctly loading assets
 pts-core: Add result viewer option "hide noisy results"
 pts-core: Add result viewer option "hide results with little change/spread"
+pts-core: Add result viewer option "only show results where X faster than Y"
 
 Phoronix Test Suite 9.4.1
 4 March 2020
